# adguard-ai-auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  install.sh  pyproject.toml  readme.md  readme.ru.md
src/adguard_auditor/: __init__.py  main.py
src/adguard_auditor/api/v1/endpoints/: audit.py  prompt_rules.py  settings.py
src/adguard_auditor/core/: config.py  endpoints.py  logger.py  prompts.py
src/adguard_auditor/frontend/static/: app.js  i18n.js  style.css
src/adguard_auditor/frontend/templates/: index.html
src/adguard_auditor/schemas/: adguard_models.py  audit.py  prompt_rules.py  settings.py  storage.py
src/adguard_auditor/services/: adguard_client.py  analysis_service.py  cache.py  controller.py  prompt_rules_service.py  settings_service.py
src/deepseek/: init.py
src/gemini/: init.py
src/openai/: init.py
src/unsloth/: init.py
src/vertex_ai/: init.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_llm_integration.py  test_settings_endpoints.py
tests/unit/: test_adguard_client.py  test_analysis_service.py  test_prompt_rules.py  test_settings.py
