[project]
name = "adguard-auditor"
version = "1.1.3"
description = "AI-powered AdGuard Home log analyzer"
authors = [
    {name = "and8928"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.33.0,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "google-genai (>=1.69.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openai (>=2.44.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.14.0"
pytest-asyncio = ">=0.25.0"
responses = ">=0.25.0"
pytest-cov = ">=6.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
